[package]
name = "as2-parser"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "ActionScript 2 parser"
documentation = "https://github.com/open-flash/as2-parser"
homepage = "https://github.com/open-flash/as2-parser"
repository = "https://github.com/open-flash/as2-parser"
readme = "./README.md"
keywords = ["ast", "swf", "avm1"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
name = "as2_parser"
path = "src/lib.rs"

[dependencies]
rowan = "^0.9.1"
# TODO: Use regular dependency once the following issue is fixed:
# https://github.com/XX/variant_count/pull/2
variant_count = {git = "https://github.com/demurgos/variant_count.git", rev="820cfeb6ed6787d6aa827c82b4ef6e27f4b850f5"}

[dev-dependencies]
serde = "^1.0.104"
test-generator = "^0.3.0"

# [replace]
# "avm1-types:0.9.0" = { path = '../../avm1-types/rs' }

[features]
# Use Generic Associated Types
gat = []
